// SPDX-License-Identifier: MIT
//
// Copyright (c) 2024 Berachain Foundation
//
// Permission is hereby granted, free of charge, to any person
// obtaining a copy of this software and associated documentation
// files (the "Software"), to deal in the Software without
// restriction, including without limitation the rights to use,
// copy, modify, merge, publish, distribute, sublicense, and/or sell
// copies of the Software, and to permit persons to whom the
// Software is furnished to do so, subject to the following
// conditions:
//
// The above copyright notice and this permission notice shall be
// included in all copies or substantial portions of the Software.
//
// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
// EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
// OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
// NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
// HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
// WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
// FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
// OTHER DEALINGS IN THE SOFTWARE.

syntax = "proto3";
package engine.types.v1;

import "ethereum/engine/v1/execution_engine.proto";

option go_package = "github.com/itsdevbear/bolaris/engine/types/v1;enginev1";

// ExecutionPayloadContainer is a container for an execution payload.
message ExecutionPayloadContainer {
  // payload represents the payload of the execution.
  oneof payload {
    // deneb represents an execution payload for deneb
    ethereum.engine.v1.ExecutionPayloadDeneb deneb = 1;
    // deneb_header is the blinded block.
    ethereum.engine.v1.ExecutionPayloadHeaderDeneb deneb_header = 2;
  }
  // value is a byte array representing the value associated with the container.
  bytes payload_value = 1001;
  // blobs_bundle encapsulates a collection of blobs associated with the container.
  ethereum.engine.v1.BlobsBundle blobs_bundle = 1002;
  // should_override_builder indicates whether the default builder should be overridden.
  bool should_override_builder = 1003;
}
